--- a/configuration.properties
+++ b/configuration.properties
@@ -2,12 +2,13 @@ browser=chrome
 url=https://cybertek-reservation-qa.herokuapp.com/
 base_url=https://cybertek-reservation-api-qa.herokuapp.com
 
+
 environment=qa1
 
 #database connection info
 dbUsername=qa_user
 dbPassword=Cybertek11!
-dbUrl=jdbc:postgresql://room-reservation-qa.cxvqfpt4mc2y.us-east-1.rds.amazonaws.com:5432/postgres
+dbUrl=jdbc:postgresql://room-reservation-qa2.cxvqfpt4mc2y.us-east-1.rds.amazonaws.com/room_reservation_qa2?:5432/room_reservation_qa2:5432/postgres
 
 #each user type
 teacher_email=blyst6@si.edu
